@@ -9,6 +9,7 @@ FAMILIA, CHANGES
 * CHANGE: Fix for Familia objects with custom suffixes
 * CHANGE: Familia::String methods that modify the key now automatically update_expiration.
 * CHANGE: Familia::Object.prefix replaces :: in class names with Familia.delim
+* CHANGE: Use Familia::Object#object_writer instead of Familia::Object.string :object
 * ADDED: Familia.qnow, Familia::Object.qstamp, RedisObject#qstamp
 * ADDED: RedisObject option: quantize
 * ADDED: Familia::Object#savenx
